@@ -174,6 +174,7 @@ bool CLocalizeStrings::Load(const CStdString& strFileName)
   m_vecStrings[20052] = "Caution";
   m_vecStrings[20053] = "Left master mode";
   m_vecStrings[20054] = "Entered master mode";
+  m_vecStrings[20055] = "Allmusic.com Thumb";
 
   // new strings for weather localization
   m_vecStrings[1411] = "with";
